Closed Bug 845277 Opened 13 years ago Closed 13 years ago

Asan builds burning with "js/src/jsproxy.h:346:7: error: visibility does not match previous declaration"

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: emorley, Assigned: espindola)

References

Details

Attachments

(1 file)

Started on this push: https://tbpl.mozilla.org/?noignore=1&rev=f9ece777368e { In file included from /builds/slave/m-cen-l64-dbg-asan-00000000000/build/js/src/jsobjinlines.h:22: /builds/slave/m-cen-l64-dbg-asan-00000000000/build/js/src/jsproxy.h:346:7: error: visibility does not match previous declaration class JS_FRIEND_API(AutoEnterPolicy) }
decoder: The first bad revision is: decoder: changeset: 122943:51483e470216 decoder: user: Bobby Holley <bobbyholley@snip> decoder: date: Mon Feb 25 13:54:18 2013 -0800 decoder: summary: Bug 836301 - Hoist some assertions, remove a bunch of no-op trap overrides, and add assertions that we've entered our policy. r=mrbkap
Blocks: 836301
The clang used is 170890.
(In reply to Rafael Ávila de Espíndola (:espindola) from comment #2) > The clang used is 170890. Which is the one we had been using. I thought this could be a bug in newer clangs, but was change in m-c.
Attached patch patchSplinter Review
Assignee: general → respindola
Status: NEW → ASSIGNED
Attachment #718384 - Flags: review?(bobbyholley+bmo)
See also bug 845215.
Attachment #718384 - Flags: review?(bobbyholley+bmo) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Depends on: 845868
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: