Bug 845277 - Asan builds burning with "js/src/jsproxy.h:346:7: error: visibility does not match previous declaration". r=bholley.